--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,23 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".HomeFragment">
-
-    <!--    <TextView-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:layout_marginBottom="16dp"-->
-    <!--        android:text="Home Screen"-->
-    <!--        android:textAppearance="@style/TextAppearance.AppCompat.Large" />-->
-
-    <!--    <TextView-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:text="My room"-->
-    <!--        android:layout_margin="20dp" />-->
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -29,8 +16,7 @@
             android:id="@+id/button_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/login_button_text"
-            android:visibility="invisible" />
+            android:text="@string/login_button_text" />
 
         <ImageView
             android:layout_width="140dp"
@@ -47,70 +33,16 @@
             android:text="@string/user_rooms_text"
             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/roomsView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:spanCount="2"
+            tools:listitem="@layout/layout_room_listitem" />
 
-        <GridLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="5dp"
-            android:alignmentMode="alignMargins"
-            android:columnCount="2"
-            android:columnOrderPreserved="false"
-            android:minWidth="190dp"
-            android:rowCount="4">
-
-<!--            <androidx.cardview.widget.CardView
-                android:layout_width="170dp"
-                android:layout_height="170dp"
-                android:layout_margin="10dp"
-                app:cardCornerRadius="12dp"
-                app:cardElevation="5dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="140dp"
-                        android:scaleType="centerCrop"
-                        app:srcCompat="@drawable/room_1" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/dynamic_room_nr_text"
-                        android:textSize="18sp" />
-
-                </LinearLayout>
-
-            </androidx.cardview.widget.CardView>-->
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/cardview_add"
-                android:layout_width="170dp"
-                android:layout_height="170dp"
-                android:layout_margin="10dp"
-                app:cardCornerRadius="40dp"
-                app:cardElevation="5dp">
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@color/light_grey"
-                    android:scaleType="center"
-                    android:scaleX="5"
-                    android:scaleY="5"
-                    android:src="@drawable/ic_add" />
-
-
-            </androidx.cardview.widget.CardView>
-
-        </GridLayout>
 
     </LinearLayout>
 
 
-</ScrollView>
+</LinearLayout>
