--- a/app/src/main/res/menu/drawer_bottom_nav_menu.xml
+++ b/app/src/main/res/menu/drawer_bottom_nav_menu.xml
@@ -4,11 +4,11 @@
     <item
         android:id="@+id/homeFragment"
         android:icon="@drawable/ic_home"
-        android:title="Home" />
+        android:title="@string/homeF" />
 
     <item
         android:id="@+id/historyFragment"
         android:icon="@drawable/ic_history"
-        android:title="History" />
+        android:title="@string/historyF" />
 
 </menu>
