--- a/app/src/main/res/layout/layout_room_listitem.xml
+++ b/app/src/main/res/layout/layout_room_listitem.xml
@@ -22,6 +22,7 @@
         android:layout_below="@+id/room_image"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:text="@string/placeholder"
         android:textColor="#000"
         android:textSize="17sp" />
