--- a/app/src/main/res/layout/fragment_add_potdevice.xml
+++ b/app/src/main/res/layout/fragment_add_potdevice.xml
@@ -6,24 +6,24 @@
     android:gravity="center"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".AddRoomFragment">
+    tools:context=".AddPotDeviceFragment">
 
     <EditText
-        android:id="@+id/edit_text_room_name"
+        android:id="@+id/edit_text_device_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/room_name_text" />
+        android:hint="@string/device_name_text" />
 
     <EditText
-        android:id="@+id/edit_text_room_photo"
+        android:id="@+id/edit_text_device_photo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/room_photo_text" />
+        android:hint="@string/device_photo_text" />
 
     <Button
-        android:id="@+id/button_add_room"
+        android:id="@+id/button_add_pot_device"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/add_room_button" />
+        android:text="@string/add_device_button" />
 
 </LinearLayout>
