--- a/app/src/main/res/layout/fragment_add_potdevice.xml
+++ b/app/src/main/res/layout/fragment_add_potdevice.xml
@@ -6,7 +6,7 @@
     android:gravity="center"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".AddPotDeviceFragment">
+    tools:context=".fragments.AddPotDeviceFragment">
 
     <EditText
         android:id="@+id/edit_text_device_name"
