--- a/app/src/main/res/layout/fragment_add_room.xml
+++ b/app/src/main/res/layout/fragment_add_room.xml
@@ -6,7 +6,7 @@
     android:gravity="center"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".AddRoomFragment">
+    tools:context=".fragments.AddRoomFragment">
 
     <EditText
         android:id="@+id/edit_text_room_name"
