--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".HistoryFragment">
+    tools:context=".fragments.HistoryFragment">
 
     <TextView
         android:layout_width="wrap_content"
