--- a/app/src/main/res/layout/fragment_terms.xml
+++ b/app/src/main/res/layout/fragment_terms.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".TermsFragment">
+    tools:context=".fragments.TermsFragment">
 
     <TextView
         android:layout_width="wrap_content"
