--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,16 +9,21 @@
     tools:context=".fragments.HomeFragment">
 
     <ImageView
+        android:id="@+id/home_logo_image"
         android:layout_width="140dp"
         android:layout_height="140dp"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="70dp"
         android:contentDescription="@string/homeLogoDesc"
         android:scaleType="centerCrop"
         app:srcCompat="@drawable/room_1" />
 
     <TextView
+        android:id="@+id/rooms_list_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/home_logo_image"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
         android:layout_marginBottom="16dp"
         android:text="@string/user_rooms_text"
@@ -28,9 +33,21 @@
         android:id="@+id/roomsView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@id/rooms_list_header"
+        android:layout_marginTop="20dp"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:spanCount="2"
 
         tools:listitem="@layout/layout_room_listitem" />
 
-</LinearLayout>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/button_add_room"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@id/roomsView"
+        android:layout_alignBottom="@id/roomsView"
+        android:layout_margin="20dp"
+        android:contentDescription="@string/fab_room_desc"
+        app:srcCompat="@drawable/ic_add" />
+
+</RelativeLayout>
