--- a/app/src/main/res/layout/fragment_room.xml
+++ b/app/src/main/res/layout/fragment_room.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,9 +9,11 @@
     tools:context=".fragments.RoomFragment">
 
     <TextView
+        android:id="@+id/user_pot_devices_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginVertical="40dp"
         android:text="@string/user_pot_devices_text"
         android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
@@ -19,16 +21,18 @@
         android:id="@+id/button_add_device"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_marginEnd="20dp"
-        android:contentDescription="@string/fab_room_desc"
+        android:layout_alignEnd="@id/devicesView"
+        android:layout_alignBottom="@id/devicesView"
+        android:layout_margin="20dp"
+        android:contentDescription="@string/fab_device_desc"
         app:srcCompat="@drawable/ic_add" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/devicesView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@id/user_pot_devices_text"
 
         tools:listitem="@layout/layout_device_listitem" />
 
-</LinearLayout>
+</RelativeLayout>
