--- a/app/src/main/res/layout/fragment_add_potdevice.xml
+++ b/app/src/main/res/layout/fragment_add_potdevice.xml
@@ -5,20 +5,36 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="16dp"
+    android:padding="30dp"
     tools:context=".fragments.AddPotDeviceFragment">
 
-    <EditText
-        android:id="@+id/edit_text_device_name"
+    <com.google.android.material.textfield.TextInputLayout
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/device_name_text" />
+        android:layout_marginBottom="6dp"
+        android:hint="@string/device_name_text">
 
-    <EditText
-        android:id="@+id/edit_text_device_photo"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edit_text_device_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/device_photo_text" />
+        android:layout_marginBottom="6dp"
+        android:hint="@string/device_photo_text">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edit_text_device_photo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/button_add_pot_device"
