--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6A9A32</color>
-    <color name="colorPrimaryDark">#8BC34A</color>
-    <color name="colorAccent">#0384DA</color>
+    <color name="colorPrimary">#7A9A55</color>
+    <color name="colorPrimaryDark">#61803F</color>
+    <color name="colorAccent">#9CCD63</color>
+    <color name="red">#FF3C3C</color>
     <color name="white">#FFFFFF</color>
     <color name="light_grey">#F1F1F1</color>
 </resources>
