--- a/app/src/main/res/layout/fragment_edit_room.xml
+++ b/app/src/main/res/layout/fragment_edit_room.xml
@@ -7,30 +7,73 @@
     tools:context=".fragments.EditRoomFragment">
 
     <ImageView
-        android:id="@+id/new_room_image"
+        android:id="@+id/edit_room_image"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.4" />
+        android:layout_weight="1" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="20dp"
+        android:hint="@string/edit_room_roomname">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edit_room_newname"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="20dp"
+        android:hint="@string/edit_room_newimage">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edit_room_newimage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </com.google.android.material.textfield.TextInputLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.6">
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:gravity="center">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/new_room_name"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="match_parent"
+        <Button
+            android:id="@+id/edit_room_cancel"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:hint="Name">
+            android:layout_margin="10dp"
+            android:text="@string/button_edit_room_cancel" />
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-        </com.google.android.material.textfield.TextInputLayout>
+        <Button
+            android:id="@+id/edit_room_save"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="@string/button_edit_room_save" />
 
     </LinearLayout>
+
+    <Button
+        android:id="@+id/edit_room_delete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="20dp"
+        android:backgroundTint="@color/red"
+        android:text="@string/button_edit_room_delete" />
 
 </LinearLayout>
