--- a/app/src/main/res/layout/fragment_add_room.xml
+++ b/app/src/main/res/layout/fragment_add_room.xml
@@ -27,6 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="6dp"
+        android:visibility="invisible"
         android:hint="@string/room_photo_text">
 
         <com.google.android.material.textfield.TextInputEditText
