--- a/app/src/main/res/layout/fragment_edit_room.xml
+++ b/app/src/main/res/layout/fragment_edit_room.xml
@@ -10,7 +10,8 @@
         android:id="@+id/edit_room_image"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:scaleType="centerCrop" />
 
     <com.google.android.material.textfield.TextInputLayout
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -34,9 +35,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_marginRight="20dp"
-        android:hint="@string/edit_room_newimage">
+        android:hint="@string/edit_room_newimage"
+        android:visibility="invisible">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edit_room_newimage"
