--- a/app/src/main/res/layout/layout_device_listitem.xml
+++ b/app/src/main/res/layout/layout_device_listitem.xml
@@ -13,7 +13,7 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:contentDescription="@string/placeholder"
-        android:src="@mipmap/ic_launcher" />
+        android:src="@mipmap/icon_small" />
 
     <TextView
         android:id="@+id/device_name"
