--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/homeFragment"
         android:name="edu.zut.wi.planttactic.fragments.HomeFragment"
-        android:label="@string/homeF"
+        android:label="@string/app_name"
         tools:layout="@layout/fragment_home">
 
         <action
