--- a/app/src/main/res/layout/fragment_add_room.xml
+++ b/app/src/main/res/layout/fragment_add_room.xml
@@ -27,8 +27,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="6dp"
-        android:visibility="invisible"
-        android:hint="@string/room_photo_text">
+        android:hint="@string/room_photo_text"
+        android:visibility="invisible">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edit_text_room_photo"
