--- a/app/src/main/res/layout/fragment_potdevice.xml
+++ b/app/src/main/res/layout/fragment_potdevice.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:text="@string/placeholder"
+        android:text="@string/potDeviceF"
         android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
 </LinearLayout>
