--- a/app/src/main/res/layout/fragment_terms.xml
+++ b/app/src/main/res/layout/fragment_terms.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:text="Terms &amp; Conditions"
+        android:text="@string/termsAndConditions"
         android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
 </LinearLayout>
